[package]
name = "sphere-cli"
version = "0.1.0"
authors = ["335g <actionstar619@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "stream"] }
clap = { version = "3.0.0-beta.2", features = ["cargo"] }
once_cell = "1.5"
easy-scraper = "0.2"
tokio = { version = "0.2", features = ["full"] }
chrono = "0.4"
regex = "1.4"
indicatif = "0.15"
which = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.1"
base64 = "0.13"
thiserror = "1.0"
url = "*"